   o Added "infox have_sockets" and "infox have_msgcats".
   o chartype ord will not return an error on multi-char strings.
   o Added "chroot", "nice", and "sync" commands, "infox have_fsync" option.
-------------------------------------------------------------------------------
10 Nov 93:
   o Added epoch keyword in convertclock.  This is to support the postgres
     database time date format.  Thanks to "Wolf-D. Ihlenfeldt"
     <wolf@molout.tutkie.tut.ac.jp>
   o Exported Tcl_GetTimeZone.
===============================================================================
10 Nov 93: Released TclX7.1a Beta 5.
===============================================================================
13 Nov 93:
   o Renamed TclX_AppInit function to Tcl_AppInit.  This caused major problem
     building shared libraries on Suns.  Also added a reference to "matherr"
     to get the Tcl matherr function brought in on Suns.  Thanks to
     Dr. Joseph E. Sacco <jsacco@ssl.com>.
-------------------------------------------------------------------------------
17 Nov 93:
   o Added #ifndef checks around internal math function declarations to 
     prevent conflicts with GNU libc header files. (Should really check in
     autoconf).
   o Added "cexpand" and "cequal" commands.
   o Added various changes to support Linux.
===============================================================================
18 Nov 93: Released TclX7.2a.
===============================================================================
20 Nov 93:
   o Improved tclhelp program:  can resize text windows,  added apropos
     functionallity.
-------------------------------------------------------------------------------
22 Nov 93:
   o Fixed problems with building with a seperate build directory.
===============================================================================
22 Nov 93: Released TclX7.3a and TclX7.2a to TclX7.3a patch.
===============================================================================