@@ -39,6 +39,7 @@
 ./src/tclXcmdloop.c
 ./src/tclXcnvclock.c
 ./src/tclXconfig.h.in
+./src/tclXdata.c
 ./src/tclXdebug.c
 ./src/tclXdup.c
 ./src/tclXfcntl.c
@@ -344,6 +345,7 @@
 ./tksrc/SYSLIBS.in
 ./tksrc/tkX.h
 ./tksrc/tkXAppInit.c
+./tksrc/tkXdata.c
 ./tksrc/tkXinit.c
 ./tksrc/tkXmain.c
 ./tksrc/tkXshell.c
