@@ -724,3 +724,6 @@
 ===============================================================================
 22 Nov 93: Released TclX7.3a and TclX7.2a to TclX7.3a patch.
 ===============================================================================
+ 1 Dec 93:
+   o Modify to allow initializing TclX without an Tcl_AppInit function.
+-------------------------------------------------------------------------------
